results/SVCOMP/4-shot/log-exceptions2-2024_03_18_15_44_06.txt
class A extends Throwable {}

class B extends A {}

class C extends B {}

public class exceptions2 {
  //@ requires true;
  //@ ensures (\forall Exception exc; exc instanceof C || exc instanceof B; false);
  public static void main(String[] args) {
    try {
      B b = new B();
      throw b;
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions2.java:9: error: incompatible types: Exception cannot be converted to C
  //@ ensures (\forall Exception exc; exc instanceof C || exc instanceof B; false);
                                      ^
/home/max/Documents/JMLGPT/tmp/exceptions2.java:9: error: incompatible types: Exception cannot be converted to B
  //@ ensures (\forall Exception exc; exc instanceof C || exc instanceof B; false);
                                                          ^
2 errors

